--- a/front-end/client/src/components/About/About.css
+++ b/front-end/client/src/components/About/About.css
@@ -44,13 +44,14 @@
     margin-bottom: 20px;
     width: 100%;
     justify-content: center;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid turquoise;
     text-align: center;
     font-weight: 500;
 }
 
 .info p {
     margin-top: 20px;
+    padding: 1px;
     margin-bottom: 15px;
     font-size: 18px;
     color: black;
