--- a/front-end/client/src/components/About/About.css
+++ b/front-end/client/src/components/About/About.css
@@ -44,7 +44,7 @@
     margin-bottom: 20px;
     width: 100%;
     justify-content: center;
-    border-bottom: 1px solid turquoise;
+    border-bottom: 1px solid black;
     text-align: center;
     font-weight: 500;
 }
